--- a/app/src/main/res/layout/activity_third_party.xml
+++ b/app/src/main/res/layout/activity_third_party.xml
@@ -48,12 +48,24 @@
         android:layout_below="@+id/rlHeader"
         android:layout_marginBottom="10dp"
         android:orientation="horizontal" >
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="@string/tweets_count_label"
+            android:id="@+id/tvTweetsCount"
+            android:gravity="center"
+            android:layout_gravity="center"
+            android:paddingLeft="20dp"
+            android:paddingRight="20dp"
+            android:layout_alignParentTop="true"/>
 
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="@string/followers_label"
             android:id="@+id/tvFollowers"
+            android:gravity="center"
+            android:layout_gravity="center"
             android:paddingRight="20dp"
             android:layout_alignParentTop="true"/>
 
@@ -62,9 +74,19 @@
             android:layout_height="wrap_content"
             android:text="@string/following_label"
             android:id="@+id/tvFollowing"
+            android:gravity="center"
+            android:layout_gravity="center"
+            android:paddingRight="10dp"
             android:layout_alignParentTop="true"/>
 
     </LinearLayout>
+
+    <ProgressBar
+        android:id="@+id/pbLoading"
+        android:visibility="invisible"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_centerInParent="true"/>
 
     <FrameLayout
         android:id="@+id/thirdPartyFragmentHolder"
